2011-01-31  Miklos Szeredi <miklos@szeredi.hu>

	* In case of failure to add to /etc/mtab use same mountpoint for
	cleanup as for mounting.  Reported by Marc Deslauriers

2010-12-16  Miklos Szeredi <miklos@szeredi.hu>

	* Highlevel lib: allow hash tables to shrink

	* Highlevel lib: add slab allocation for node cache.  This will
	allow the memory used by the filesystem to grow and shrink
	depending on how many inodes are currently cached.

2010-12-13  Miklos Szeredi <miklos@szeredi.hu>

	* Highlevel lib: use dynamically resized hash table for looking up
	by name and node ID.

2010-11-10  Miklos Szeredi <miklos@szeredi.hu>

	* Add new write_buf() method to the highlevel API.  Similarly to
	the lowlevel write_buf() method, this allows implementing zero
	copy writes.

	* Add a new read_buf() method to the highlevel API.  This allows
	returning a generic buffer from the read method, which in turn
	allows zero copy reads.

	* In fusexmp_fh implement the ->read_buf() and ->write_buf()
	methods.  Leave the ->read() and ->write() implementations for
	reference, even though they are not necessary.

2010-11-08  Miklos Szeredi <miklos@szeredi.hu>

	* Fix check for read-only fs in mtab update

	* Open /dev/null for write instead of read for redirecting stdout
	and stderr

	* If umount(8) supports --fake and --no-canonicalize (util-linux-ng
	version 2.18 or later), and umount(2) supports the
	UMOUNT_NOFOLLOW flag (linux kernel version 2.6.35 or later)  then,
	"fusermount -u" will call the umount(2) system call and use
	"umount --fake ..." to update /etc/mtab

	* Added --disable-legacy-umount option to configure.  This
	disables the runtime checking of umount(8) version.  When built
	with this option then "fusermount -u" will fail if umount(8)
	doesn't support the --fake and --no-canonicalize options.

	* Fix fuse_buf_copy() if already at the end of the buffers

	* Add new ->write_buf() method to low level interface.  This